--- a/assets/package.json
+++ b/assets/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
+    "konva": "^2.0.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-konva": "^1.7.1",
     "reactstrap": "^5.0.0-alpha.4",
     "underscore": "^1.8.3"
   },
