--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-konva": "^1.7.1",
+    "react-stopwatch": "^1.0.3",
     "reactstrap": "^5.0.0-alpha.4",
     "underscore": "^1.8.3"
   },
